--- a/css/main.css
+++ b/css/main.css
@@ -748,5 +748,6 @@ button.button-inactive path {
   .location__download__header {
     font-size: 16px;
     margin-bottom: 16px;
+    font-weight: 400;
   }
 }/*# sourceMappingURL=main.css.map */
