--- a/scss/_main_styles.scss
+++ b/scss/_main_styles.scss
@@ -803,6 +803,7 @@ button.button-inactive {
             &__header {
                 font-size: 16px;
                 margin-bottom: 16px;
+                font-weight: 400;
             }
         }
     }
